--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,31 @@
-.App {
+.header {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.appbody {
+  
+  border: 2px solid black;
+  border-radius: 5px;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding-bottom: 100px;
+  margin-bottom: 20px;
+  
+}
+
+.appbody > h1 {
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.addperson {
+  
+  border: 2px solid black;
+  border-radius: 5px;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
-.App-link {
-  color: #61dafb;
+.addperson > h1 {
+  text-align: center;
 }
