--- a/src/css/AddPersonForm.css
+++ b/src/css/AddPersonForm.css
@@ -1,15 +1,44 @@
 .addperson {
     font-size: 12px;
     border: 2px solid black;
-    border-radius: 5px;
+    border-radius: 15px;
+    justify-content: center;
     margin-left: 30%;
     margin-right: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
+    background-color: rgb(183, 180, 206);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   .textinput {
-    margin-top: 20px;
-    margin-left: 10px;
+    margin-top: 2.7%;
+    margin-left: 1%;
+    
   }
   .addperson > h1 {
     text-align: center;
+    
+  }
+
+  .button {
+    background-color: rgb(48, 47, 47, 0.5);
+    border: 2px solid black;
+    color: white;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+
+  .button:hover {
+    color: white;
+    background-color: #4c53af;
+    transform: scale(1.05);
+    transition: 250ms ease-in;
+
   }
