--- a/src/css/AppBody.css
+++ b/src/css/AppBody.css
@@ -1,14 +1,16 @@
 .appbody {
     font-size: 12px;
     border: 2px solid black;
-    border-radius: 5px;
+    border-radius: 15px;
+    padding-top: 20px;
     margin-left: 30%;
     margin-right: 30%;
     padding-bottom: 100px;
     margin-bottom: 20px;
-    
+    background-color: rgb(183, 180, 206);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-rendering: optimizeLegibility;
   }
+
+
   
-  .appbody > h1 {
-    text-align: center;
-  }
