--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,4 +1,17 @@
 .header {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    color: rgb(212, 210, 203);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .header > h2 {
+    margin-left: 3%;
+    margin-top: 2.0%;
+    transform: scale(2);
+    display: flex;
+    padding-top: 0.35%;
+    border-radius: 99px;
+    background-color: rgba(146, 122, 255, 0.5);
   }
